     * Prefix operator handling in F# was broken (BenBE)
     * CDATA handling for html4strict (BenBE)
     * Common subcommands for Apache, APT, CVS, Git, SVN and YUM for Bash (BenBE)
     * Limited support for prompt detection in single line Bash snippets (BenBE)
     * Added functions of the C standard library (BenBE)
     * Rework of Lua to use GeSHi's features better (BenBE)
Version 1.0.8.9
  -  Added language files
     * Algol68 (Neville Dempsey)
     * E (Kevin Reid)
     * FormulaOne (Juro Bystricky)
     * Go (Markus Jarderot)
     * Liberty BASIC (Chris Iverson)
     * MOS 6502/6510 Assemblers (Warren Willmey)
     * Motorola 68k assembler (Warren Willmey)
     * Objeck Programming Language (Randy Hollines)
     * ZXBasic (Jose Rodriguez)
  -  Added support for $-prefixed hex numbers and @-prefixed octal numbers
  -  Added Parser Control for languages to tell when numbers are present
     inside of non-string parts
  -  Introduced querying supported/known languages directly
  -  Introduced querying full language names without loading the language file
  -  Improvements to language files (BenBE)
     * Added loads of keywords for generic SQL highlighting (Jürgen Thomas)
Version 1.0.8.8
  -  Added language files
     * ChaiScript (Jason Turner & Jonathan Turner)
     * Genie (Nicolas Joseph)
     * GwBasic (José Gabriel Moya Yangüela)
     * HicEst (Georg Petrich)
     * Icon (Matt Oates)
     * MagikSF (Sjoerd van Leent)
     * Modula 2 (Benjamin Kowarsch)
     * Oz (Wolfgang Meyer)
     * PCRE (BenBE)
     * PostgreSQL (Christophe Chauvet)
     * q/kdb+ (Ian Roddis)
     * RPM Specification Files (Paul Grinberg)
     * Unicon (Matt Oates)
     * Vala (Nicolas Joseph)
     * XBasic (José Gabriel Moya Yangüela)
  -  Improvements to language files (BenBE)
     * Major reworks and improvements to OCaml language file (BenBE)
     * Removed duplicate entries from keyword groups of VIM language file (Segaja)